chore: sonar